# FlowSlide

./: .env.example  .env.integrated  .flake8  .github-workflows-docker-build.yml  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CHINESE_INK_TEMPLATE_PREVIEW_GUIDE.md  COMMIT_MESSAGE.txt  CONTINUOUS_IMPROVEMENT_SUMMARY.md  CRITICAL_CONFIG_SYNC_SUMMARY.md  DATABASE_MONITORING_GUIDE.md  DATABASE_SECURITY_GUIDE.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_MODE_SWITCHING_GUIDE.md  DEPLOYMENT_READINESS_CHECKLIST.md  DEPLOYMENT_READY.md  DOCKER_DEPLOYMENT.md  DOCKER_HUB_SETUP.md  DOCKER_OPTIMIZATION_GUIDE.md  Dockerfile  Dockerfile.enhanced  ENHANCED_SYNC_SUMMARY.md  GITHUB_CHECKLIST.md  GITHUB_DEPLOYMENT_GUIDE.md  GITHUB_PUSH_GUIDE.md  GIT_INSTALLATION_GUIDE.md  INTEGRATION_GUIDE.md  LAYERED_SYNC_OPTIMIZATION_SUMMARY.md  LICENSE  NOTICE  NO_EXTERNAL_DB_SUMMARY.md  POSTGRESQL_COMPATIBILITY_GUIDE.md  PROJECT_COMPLETION_SUMMARY.md  PROJECT_IMPROVEMENTS.md  PROJECT_IMPROVEMENTS_SUMMARY.md  PROJECT_STRUCTURE.md  PUSH_STATUS.md  QUICK_START_GUIDE.md  (+135 more)
.github/: copilot-instructions.md
.github/workflows/: Delete.yaml  ci-cd-backup.yml  ci-cd-simple.yml  ci-cd.yml  ci.yml  code-quality.yml  database-health-check.yml  docker-build-push.yml  docker-build.yml  docker-fast-build.yml  docker-hub-publish.yml  docker.yml  release.yml
.tmp_src_backup/flowslide/ai/: __init__.py  base.py  providers.py
.tmp_src_backup/flowslide/api/: config_api.py  database_api.py  flowslide_api.py  global_master_template_api.py  image_api.py  models.py
.tmp_src_backup/flowslide/auth/: __init__.py  auth_service.py  routes.py
.tmp_src_backup/flowslide/core/: __init__.py  simple_config.py
.tmp_src_backup/flowslide/database/: __init__.py  create_default_template.py  health_check.py  models.py  service.py
.tmp_src_backup/flowslide/monitoring/: metrics.py
.tmp_src_backup/flowslide/services/: config_service.py  db_project_manager.py  file_processor.py  global_master_template_service.py  pdf_to_pptx_converter.py  ppt_service.py  pyppeteer_pdf_converter.py  service_instances.py
.tmp_src_backup/flowslide/utils/: thread_pool.py
.tmp_src_backup/summeryanyfile/: main.py
.tmp_src_backup/summeryanyfile/config/: __init__.py  prompts.py  settings.py
.tmp_src_backup/summeryanyfile/core/: document_processor.py  markitdown_converter.py
.tmp_src_backup/summeryanyfile/generators/: chains.py  ppt_generator.py
.tmp_src_backup/summeryanyfile/graph/: nodes.py  workflow.py
.tmp_src_backup/summeryanyfile/utils/: file_handler.py  logger.py  validators.py
archive/removed_20250831/: app_log.txt  deployment_mode_test_report.json  flake_report.txt
cleanup_archive_20250831_141624/: check_data_backup_snapshot.py  check_dom.py  extract_backup.py  headless_check_backup.py
data/: backup_config.json
docs/: index.html
docs/_site/: index.html
docs/api/: FlowSlide_API.postman_collection.json  README.md
monitoring/: alert_rules.yml  alertmanager.yml  prometheus.yml
monitoring/grafana/dashboards/: flowslide-overview.json
scripts/: auto_fix_f401.py  check_templates_css_in_scripts.py  collect_f401_api.py  demo_auto_mode_detection.py  demo_deployment_mode_switching.py  dump_tail.py  f401_api.json  find_long_lines.py  flake_after_ruff_black.txt  flake_all.txt  flake_check.txt  flake_output_full_api.txt  git_api_push.ps1  inspect_providers.py  long_lines_config_api.txt  long_lines_providers.py  normalize_whitespace.py  print_providers_lines.py  probe_chat.py  probe_chat_out.txt  probe_chat_response.txt  probe_chat_save.py  probe_out.txt  probe_proxy.py  rename_default_business_template.py  ruff_diff_preview.txt  run_flake.py  run_flake_and_save.py  run_flake_cli.py  scan_providers.py  strip_out.txt  strip_trailing_newlines.py  tail_output.txt  validate_layered_sync_strategy.py  validate_r2_cost_optimization.py  verify-deployment.sh  web_flake.txt  web_flake_after.txt
security/: security_scan.py
src/config/: deployment.json
src/flowslide/: __init__.py  main.py
src/flowslide/ai/: base.py  providers.py
src/flowslide/api/: __init__.py  backup_api.py  backup_api_clean.py  config_api.py  database_api.py  deployment_api.py  flowslide_api.py  global_master_template_api.py  image_api.py  models.py  openai_compat.py  system_api.py
src/flowslide/auth/: __init__.py  auth_service.py  middleware.py  routes.py
src/flowslide/config/: static_cdn_mirrors.json
src/flowslide/core/: auto_detection_service.py  config.py  deployment_config_manager.py  deployment_mode_manager.py  simple_config.py  sync_strategy_config.py
src/flowslide/database/: __init__.py  create_default_template.py  database.py  health_check.py  migrations.py  models.py  repositories.py  service.py
src/flowslide/monitoring/: __init__.py  metrics.py
src/flowslide/services/: __init__.py  ai_service.py  backup_manager.py  backup_service.py  config_service.py  config_sync_service.py  data_sync_service.py  db_project_manager.py  deep_research_service.py  enhanced_ppt_service.py  file_processor.py  generation_worker.py  global_master_template_service.py  pdf_to_pptx_converter.py  ppt_image_processor.py  ppt_service.py  project_manager.py  pyppeteer_pdf_converter.py  research_report_generator.py  service_instances.py  smart_data_sync_service.py  url_service.py  worker_runner.py
src/flowslide/web/: __init__.py  routes.py
src/landppt/: __init__.py  main.py
src/landppt/ai/: __init__.py  providers.py
src/landppt/api/: config_api.py  database_api.py  global_master_template_api.py  landppt_api.py  models.py  openai_compat.py
src/landppt/auth/: __init__.py  auth_service.py  middleware.py  routes.py
src/landppt/core/: config.py  simple_config.py
src/landppt/database/: __init__.py  create_default_template.py  (+6 more)
src/summeryanyfile/: __init__.py  main.py
template_examples/: 中式书卷风.json  商务.json  宣纸风.json  星月夜风.json  模糊玻璃.json  简约答辩风.json  莫奈风.json
tests/: __init__.py  conftest.py
tests/performance/: api_performance.py  locustfile.py  run_performance_tests.py
tools/: clear_external_db.py  run_auto_detection_checks.py
(+156 files in other folders)
